# android-WebComicReader

./: .gitignore  .project  AndroidManifest.xml  AndroidManifest.xml~  README.md  ant.properties  build.gradle  build.xml  import-summary.txt  run
android/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
backend/: Cargo.toml
backend/src/: db.rs  health.rs  main.rs  util.rs
backend/src/comics/: mod.rs
backend/src/trawl/: mod.rs  smbc.rs
gradle/wrapper/: gradle-wrapper.properties
res/drawable-mdpi/: btn_grey.xml  comic_prev.xml  comic_random.xml  comic_start.cml~  comic_store.xml  comic_store.xml~  explosm_button.xml  explosm_button.xml~  feel-afraid_button.xml~  feelafraid_button.xml  saved.xml  smbc_button.xml  smbc_button.xml~  xkcd_button.xml  xkcd_button.xml~
res/layout/: comic_row.xml  error_text_view.xml  error_text_view.xml~  image_alt.xml~  page_fragment.xml  reader.xml  reader_wide.xml  reader_wide.xml~  select_comic.xml  select_comic.xml~  text_alt.xml  text_alt.xml~  title.xml  title.xml~
res/layout-port/: reader.xml
res/menu/: comic_menu.xml
res/values/: attrs.xml  strings.xml  strings.xml~  styles.xml
src/com/threeDBJ/comicReader/: .#Reader.java  AbstruseGooseReader.java  ButtersafeReader.java  CachedComic.java  Comic.java  ComicReaderApp.java  ComicSelectListFragment.java  CompletelySeriousReader.java  CtrlAltDeleteReader.java  DebugLog.java  DinosaurReader.java  ExplosmReader.java  FeelAfraidReader.java  (+15 more)
test/: AndroidManifest.xml  build.xml  run  test
(+68 files in other folders)
