[package]
name = "backend"
version = "0.1.0"
authors = ["Sam Pullman <sampullman@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "0.2"
actix-threadpool = "0.1.0"
actix-web = { git = "https://github.com/actix/actix-web", tag = "v1.0.0-alpha.2" }
futures = "0.1"
env_logger = "0.6"
failure = "0.1.5"
reqwest = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

r2d2 = "0.8"
r2d2_sqlite = { git = "https://github.com/sampullman/r2d2-sqlite" }
[dependencies.rusqlite]
version = "0.17.0"
features = ["bundled"]